3.0.13:
  Allow per service local_endpoint definition
  Add --stats option
3.0.12:
  Add biomaj_daemon_consumer.py to python scripts for install with package
3.0.11:
  Disable daemon web service logging
3.0.10:
  Fix tail endpoint syntax
3.0.9:
  Fix #1 remove debug log
  Fix #2 log dir not removed with --remove-all if proxy option not set
3.0.8:
  Fix #78, for multiple banks update in monolithic config, if one fails, next banks are not updated
  Add /api/daemon/bank/x/log[/y] endpoint to get last bank session log file
3.0.7:
  Add whatsup support for non proxy config
  Skip bank config with errors
3.0.6:
  Fix logging for monolithic setup
  Add whatsup option
  Fix prometheus stats
3.0.5:
  Fix for python 2.x
3.0.4:
  Fix status page with other services
  Add missing README in package
3.0.3:
  Fix missing parameters
3.0.2:
  Move options to management to utils for reuse
  Fix --about-me
3.0.1:
  Micro service to manage biomaj updates