@@ -1,6 +1,8 @@
 3.0.13:
   Allow per service local_endpoint definition
   Add --stats option
+  Modify --version option to get all module details
+
 3.0.12:
   Add biomaj_daemon_consumer.py to python scripts for install with package
 3.0.11:
